--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -5,14 +5,17 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="QRCoder" Version="1.4.3" />
+    <!-- <PackageReference Include="QRCoder" Version="1.4.3" /> -->
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="../SteamKit/SteamKit2\SteamKit2\SteamKit2.csproj" />
+    <NativeFileReference Include="NativeCrypto.c" />
+    <ProjectReference Include="../DepotDownloader/DepotDownloader.csproj" />
   </ItemGroup>
 
 </Project>
