--- a/SteamKit/SteamKit2/SteamKit2/SteamKit2.csproj
+++ b/SteamKit/SteamKit2/SteamKit2/SteamKit2.csproj
@@ -56,7 +56,9 @@
         <!-- <PackageReference Include="protobuf-net" Version="3.2.46" /> -->
 
         <ProjectReference Include="../../../protobuf-net/src/protobuf-net/protobuf-net.csproj"/>
-    <PackageReference Include="System.IO.Hashing" Version="9.0.1" />
+        <PackageReference Include="System.IO.Hashing" Version="9.0.1" />
+
+    <NativeFileReference Include="NativeCrypto.c" />
   </ItemGroup>
 
 </Project>
