--- a/SteamKit/SteamKit2/SteamKit2/SteamKit2.csproj
+++ b/SteamKit/SteamKit2/SteamKit2/SteamKit2.csproj
@@ -15,6 +15,7 @@
     <ProjectGuid>{4B2B0365-DE37-4B65-B614-3E4E7C05147D}</ProjectGuid>
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
   </PropertyGroup>
 
   <PropertyGroup>
